kubernetes/test/app-test-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-test
  labels:
    app: flask-app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app-test
  template:
    metadata:
      labels:
        app: flask-app-test
    spec:
      containers:
      - name: flask-app-test
        image: rheasamuel/test_app:1.0
        ports:
        - containerPort: 5002
        env:
        - name: REDIS_HOST
          value: "<REDIS_SERVICE_IP>"
