kubernetes/test/app-test-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db-test
  labels:
    app: redis-db-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-db-test
  template:
    metadata:
      labels:
        app: redis-db-test
    spec:
      containers:
      - name: redis-db-test
        image: redis:7
        ports:
        - containerPort: 6379
