kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-test
  labels:
    app: worker-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker-test
  template:
    metadata:
      labels:
        app: worker-test
    spec:
      containers:
      - name: worker-test
        image: rheasamuel/api_worker:1.0
        env:
        - name: REDIS_HOST
          value: "<REDIS_SERVICE_IP>"
