kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-test
spec:
  selector:
    app: flask-app-test
  ports:
    - port: 5002
      targetPort: 5002
