kubernetes/test/app-test-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: app-test-service-nodeport-flask
spec:
  type: NodePort
  selector:
    app: flask-app-test
  ports:
    - port: 5002
      targetPort: 5002
