kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-db-test
spec:
  selector:
    app: redis-db-test
  ports:
    - port: 6379
      targetPort: 6379
